--- a/index.html
+++ b/index.html
@@ -10,40 +10,72 @@
   <meta http-equiv="Pragma" content="no-cache">
   <meta http-equiv="Expires" content="0">
   
-  <!-- Helps with restoration from cache -->
-  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <!-- Preconnect to third-party origins -->
-<link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin>
-<link rel="dns-prefetch" href="https://cdnjs.cloudflare.com">
-
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="dns-prefetch" href="https://fonts.googleapis.com">
-
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link rel="dns-prefetch" href="https://fonts.gstatic.com">
-
-<!-- Stylesheets -->
-<!-- Preload & inline critical CSS first -->
-<link rel="preload" href="/pages/navbar.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-<noscript><link rel="stylesheet" href="/pages/navbar.css"></noscript>
-
-<link rel="preload" href="/pages/fonts.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-<noscript><link rel="stylesheet" href="/pages/fonts.css"></noscript>
-
-<link rel="preload" href="/style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-<noscript><link rel="stylesheet" href="/style.css"></noscript>
-
-<link rel="preload" href="/pages/buttons.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-<noscript><link rel="stylesheet" href="/pages/buttons.css"></noscript>
-
-<!-- Preload Font Awesome (CDN) -->
-<link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-<noscript><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"></noscript>
-
-<!-- Preload Google Fonts (with &display=swap for non-blocking behavior) -->
-<link rel="preload" href="https://fonts.googleapis.com/css2?family=Abel&family=Inter:wght@100..900&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
-<noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Abel&family=Inter:wght@100..900&display=swap"></noscript>
-
+  <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin>
+  <link rel="dns-prefetch" href="https://cdnjs.cloudflare.com">
+  
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="dns-prefetch" href="https://fonts.googleapis.com">
+  
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="dns-prefetch" href="https://fonts.gstatic.com">
+  
+  <!-- Stylesheets -->
+  <!-- Preload & inline critical CSS first -->
+  <link rel="preload" href="/pages/navbar.css" as="style">
+  <link rel="preload" href="/pages/fonts.css" as="style">
+  <link rel="preload" href="/style.css" as="style">
+  <link rel="preload" href="/pages/buttons.css" as="style">
+  
+  <!-- Actual stylesheet links -->
+  <link rel="stylesheet" href="/pages/navbar.css" media="print" onload="this.media='all'">
+  <link rel="stylesheet" href="/pages/fonts.css" media="print" onload="this.media='all'">
+  <link rel="stylesheet" href="/style.css" media="print" onload="this.media='all'">
+  <link rel="stylesheet" href="/pages/buttons.css" media="print" onload="this.media='all'">
+  
+  <!-- Preload Font Awesome (CDN) -->
+  <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" as="style">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" media="print" onload="this.media='all'">
+  
+  <!-- Preload Google Fonts -->
+  <link rel="preload" href="https://fonts.googleapis.com/css2?family=Abel&family=Inter:wght@100..900&display=swap" as="style">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Abel&family=Inter:wght@100..900&display=swap" media="print" onload="this.media='all'">
+  
+  <!-- Image preloads -->
+  <link rel="preload" as="image" href="/components/photos/tallow-hero-bg-1200.webp" 
+        imagesrcset="
+          /components/photos/tallow-hero-bg-400.webp 400w,
+          /components/photos/tallow-hero-bg-800.webp 800w,
+          /components/photos/tallow-hero-bg-1200.webp 1200w
+        " 
+        imagesizes="(max-width: 600px) 100vw, (max-width: 1200px) 100vw, 1200px">
+  
+  <link rel="preload" as="image" href="/components/icones/home-20.webp" 
+        imagesrcset="
+          /components/icones/home-15.webp 15w,
+          /components/icones/home-20.webp 20w
+        "
+        imagesizes="(max-width: 600px) 20px, 20px">
+  
+  <link rel="preload" as="image" href="/components/icones/about-20.webp" 
+        imagesrcset="
+          /components/icones/about-15.webp 15w,
+          /components/icones/about-20.webp 20w
+        "
+        imagesizes="(max-width: 600px) 20px, 20px">
+  
+  <link rel="preload" as="image" href="/components/icones/products-20.webp" 
+        imagesrcset="
+          /components/icones/products-15.webp 15w,
+          /components/icones/products-20.webp 20w
+        "
+        imagesizes="(max-width: 600px) 20px, 20px">
+  
+  <link rel="preload" as="image" href="/components/icones/location-20.webp" 
+        imagesrcset="
+          /components/icones/location-15.webp 15w,
+          /components/icones/location-20.webp 20w
+        "
+        imagesizes="(max-width: 600px) 20px, 20px">
 </head>
 <body>
   <header>
@@ -52,7 +84,17 @@
         <div class="navbar-left">
         <ul class="menu-list">
           <li>
-        <div class="logo-black"> <img src="/components/photos/logo-white.webp" imagesizes="(max-width: 600px) 5px, 5px"  alt="Logo Black" style="width: 60px; height: 100;"></div>
+        <div class="logo-black"> <img 
+          src="/components/photos/logo-white-200.webp" 
+          srcset="
+            components/photos/logo-on-white-bg-100.webp 120w,
+          "
+          sizes="(max-width: 600px) 60px, 60px"
+          style="aspect-ratio: 3 / 2; width: 100%; height: auto;"
+          alt="Logo Black"
+          loading="lazy"
+          decoding="async"
+        /></div>
       </li>
       <li>
         <a href="./index.html" class="brand" aria-label="Home page"> TALLOW LANCASHIRE CO</a>
@@ -65,59 +107,63 @@
 
             <li class="menu-item">
               <a href="#" class="menu-link is-active" aria-label="Current Link">
-                <img src="/components/icones/home-15.webp" alt="Home Icon" imagesrcset="
+                <img src="/components/icones/home-20.webp" class="menu-icon" alt="Home Icon" imagesrcset="
                     /components/icones/home-15.webp 15w,
                     /components/icones/home-20.webp 20w
                   "
-                  imagesizes="(max-width: 600px) 15px, 15px" 
+                  imagesizes="(max-width: 600px) 20px, 20px" 
+                  style="aspect-ratio: 0.1 / 0.1; width: 70%; height: auto;"
                   fetchpriority="high"
                   decoding="async"
                   loading="eager"
                 >
-                <span class="menu-name" style="font-size: clamp(0.7rem, 2.5vw, 1rem);">Home</span>
+                <span class="menu-name">Home</span>
               </a>
             </li>
             <li class="menu-item">
               <a href="/pages/about.html" class="menu-link" aria-label="About Us">
-                <img src="/components/icones/about-15.webp" alt="Home Icon" imagesrcset="
+                <img src="/components/icones/about-20.webp" class="menu-icon"  alt="Home Icon" imagesrcset="
                 /components/icones/about-15.webp 15w,
                 /components/icones/about-20.webp 20w
               "
-              imagesizes="(max-width: 600px) 15px, 15px" 
+              imagesizes="(max-width: 600px) 20px, 20px" 
+              style="aspect-ratio: 0.1 / 0.1; width: 60%; height: auto;"
               fetchpriority="high"
               decoding="async"
               loading="eager"
             >
-                <span class="menu-name" style="font-size: clamp(0.7rem, 2.5vw, 1rem);">About</span>
+                <span class="menu-name" >About</span>
               </a>
             </li>
             <li class="menu-item">
               <a href="/pages/products.html" class="menu-link" aria-label="Products">
-                <img src="/components/icones/products-15.webp" alt="Home Icon" imagesrcset="
+                <img src="/components/icones/products-20.webp" class="menu-icon" alt="Home Icon" imagesrcset="
                     /components/icones/products-15.webp 15w,
                     /components/icones/products-20.webp 20w
                   "
-                  imagesizes="(max-width: 600px) 15px, 15px" 
+                  imagesizes="(max-width: 600px) 20px, 20px" 
+                  style="aspect-ratio: 0.1 / 0.1; width: 45%; height: auto;"
                   fetchpriority="high"
                   decoding="async"
                   loading="eager"
                 >
-                <span class="menu-name" style="font-size: clamp(0.7rem, 2.5vw, 1rem);">Products</span>
+                <span class="menu-name">Products</span>
               </a>
             </li>
             <li class="menu-item">
               <a href="/pages/contact.html" class="menu-link"   aria-label="Contact Us">
-                <img src="/components/icones/location-15.webp" alt="Home Icon" imagesrcset="
+                <img src="/components/icones/location-20.webp" class="menu-icon" alt="Home Icon" imagesrcset="
                 /components/icones/location-15.webp 15w,
                 /components/icones/location-20.webp 20w
               "
-              imagesizes="(max-width: 600px) 15px, 15px" 
+              imagesizes="(max-width: 600px) 20px, 20px" 
+              style="aspect-ratio: 0.1 / 0.1; width: 45%; height: auto;"
               fetchpriority="high"
               decoding="async"
               loading="eager"
             >
 
-                <span class="menu-name" style="font-size: clamp(0.7rem, 2.5vw, 1rem)">Contact</span>
+                <span class="menu-name">Contact</span>
               </a>
             </li>
           </ul>
@@ -131,23 +177,33 @@
   <!-- text on banner -->
   <div class="hero-banner">
     <img 
-  src="/components/photos/tallow-hero-bg-800.webp" 
-  srcset="
-    /components/photos/tallow-hero-bg-400.webp 400w,
-    /components/photos/tallow-hero-bg-600.webp 600w,
-    /components/photos/tallow-hero-bg-800.webp 800w,
-    /components/photos/tallow-hero-bg-1200.webp 1200w,
-    /components/photos/tallow-hero-bg-1600.webp 1600w
-  "
-  sizes="(max-width: 600px) 100vw, (max-width: 1200px) 100vw, 1200px"
-  alt="Hero banner"
-  fetchpriority="high"
-  decoding="async"
-  loading="eager"
-/>
+        src="/components/photos/tallow-hero-bg-1200.webp"
+        srcset="
+          /components/photos/tallow-hero-bg-400.webp 400w,
+          /components/photos/tallow-hero-bg-800.webp 800w,
+          /components/photos/tallow-hero-bg-1200.webp 1200w
+        "
+        sizes="(max-width: 600px) 100vw, (max-width: 1200px) 100vw, 1200px"
+        alt="Hero banner"
+        fetchpriority="high"
+        decoding="async"
+        loading="eager"
+        style="aspect-ratio: 1 / 3; width: 100%; height: auto"
+      />
     
     <div class="white-logo-banner">
-      <img src="/components/photos/logo-white-tallow.webp" alt="Logo" style="width: 200px; height: auto;" loading="lazy">
+      <img 
+          src="/components/photos/logo-white-tallow-200.webp"
+          srcset="
+            /components/photos/logo-white-tallow-100.webp 400w,
+            /components/photos/logo-white-tallow-200.webp 600w
+          "
+          alt="Logo"
+          imagesizes="(max-width: 600px) 20px, 20px" 
+          style="aspect-ratio: 0.1 / 0.1; width: 100%; height: auto;"
+          loading="lazy"
+          decoding="async"
+        />
     </div>
     <div class="hero-text">
       <h1>LANCASHIRE TALLOW 
@@ -161,7 +217,7 @@
         
         <!-- Button Two  -->
         <a class="btn" href="/pages/products.html" aria-label="Move to Products">
-          <button class="button-two"><h2>PRODUCTS</h2></button>
+          <button class="button-two" style="font-size: 24px" ><h2>PRODUCTS</h2></button>
         </a>
       </div>
     </div>
@@ -230,11 +286,24 @@
             <h3>CHECK OUT AVAILABLE PRODUCTS!</h3>
             <p>Pure, nutrient-rich beef tallow, slow-rendered the traditional wet way for superior quality and flavor. Choose from 3 sizes. Perfect for cooking, skincare, and more! Try it today!</p>
             <a class="btn" href="./pages/products.html" aria-label="Move to Products">
-              <button class="button-two"><span>PRODUCTS</span></button>
+              <button class="button-two" style="font-size: 24px"><span><h4>PRODUCTS</h4></span></button>
             </a>
         </div>
         <div class="bedge-image-right">
-          <img src="/components/photos/multiple-tallow-jars.webp" alt="Multiple Tallow Jars" style="width: 100%; max-width: 600px; height: auto;" loading="lazy">
+          <img 
+  src="/components/photos/multiple-tallow-jars.webp" 
+  srcset="
+    /components/photos/multiple-tallow-jars-200.webp 400w,
+    /components/photos/multiple-tallow-jars-300.webp 600w,
+    /components/photos/multiple-tallow-jars-400.webp 800w
+  "
+    sizes="(max-width: 600px) 100vw, 600px"
+    style="aspect-ratio: 3 / 2; width: 100%; height: auto;"
+  alt="Multiple Tallow Jars" 
+  loading="lazy"
+  decoding="async"
+/>
+
         </div>
     </div>
 
@@ -244,11 +313,23 @@
             <h3>WE OPEN THE DOORS EVERYDAY AT 9:00. COME SAY HELLO!</h3>
             <p>Our friendly team is here to welcome you with a smile every day at 9:00! Whether you're picking up tallow or just stopping by, we’re happy to help, share tips, or chat about our products. Come say hello, we’d love to meet you!</p>
             <a class="btn" href="./pages/contact.html" aria-label="Move to Contact Us">
-              <button class="button-two"><span>CONTACT</span></button>
+              <button class="button-two" style="font-size: 24px" ><span> <h4>CONTACT</h4></span></button>
             </a>
         </div>
         <div class="bedge-image-left">
-          <img src="/components/photos/queue-tallow-shp.webp" alt="Health Promoting Nutrients" style="width: 100%; max-width: 600px; height: auto;" loading="lazy">
+          <img 
+          src="/components/photos/queue-tallow-shp.webp" 
+          srcset="
+            /components/photos/queue-tallow-shp-200.webp 400w,
+            /components/photos/queue-tallow-shp-300.webp 600w,
+            /components/photos/queue-tallow-shp-400.webp 800w
+          "
+          sizes="(max-width: 600px) 100vw, 600px"
+          style="aspect-ratio: 3 / 2; width: 100%; height: auto;"
+          alt="Health Promoting Nutrients" 
+          loading="lazy"
+          decoding="async"
+        />  
         </div>
     </div>
   </div>
